feature/team-1 Completed app tracker task. Added reactive spring security, reactive security filter chain for api. Change dto classes to records. Refactoring mappers, service. Refactored code for JIT, GC. Added adminUsername and adminPassword for application.yml for generate user in db. Wrote Dockerfiles for fat jar, layers, Axiom, NIK Axiom, NIK VANILLA.